<resources>

    <string name="app_name">Just Cook</string>
    <string name="hint_email">e-mail</string>
    <string name="search">Search</string>
    <string name="warning">Hay campos que no están cubiertos</string>
    <string name="warning_image_required">Falta la imagen de la receta</string>
    <string name="test">Test crash</string>
    <string name="recipe_name_taken">Título ya en uso. Escoge otro título.</string>
    <string name="hint_password">password (min. 6 characters)</string>
    <string name="button_register">New user</string>
    <string name="button_login">Login</string>
    <string name="save_button">Guardar</string>
    <string name="title">Título de la receta:</string>
    <string name="description">Descripción:</string>
    <string name="ingredient">Ingredientes:</string>
    <string name="preparation">Elaboración:</string>
    <string name="duration">Duración:</string>
    <string name="minits">Minutos</string>
    <string name="image_label">Imagen:</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="create_recipe">Crear receta</string>
    <string name="duration_format">%s \'</string>
    <string name="created_by_format">Creado por: %s</string>
    <string name="created_by">Creado por: </string>
    <string name="add_recipe_button">Add recipe button</string>
    <string name="recipe_loading">Receta cargando</string>
    <string name="save_failed">Guardado fallado</string>
    <string name="no_internet">error en la conexión a internet</string>
    <string name="no_completed">Por favor, complete todos los campos.</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="login_error">User login error. Do login again.</string>.
    <string name="empty_fields">Hay campos vacíos.</string>
</resources>